2008-11-21  Sven Neumann  <sven@gimp.org>

	* app/widgets/gimpviewrenderervectors.c
	(gimp_view_renderer_vectors_draw): inlined local variables that
	are only used once.

2008-11-21  Sven Neumann  <sven@gimp.org>

	* app/tools/gimpdrawtool.c (gimp_draw_tool_real_draw): moved
	vectors drawing to its own function.

2008-11-21  Sven Neumann  <sven@gimp.org>

	* app/tools/gimpdrawtool.[ch]: reordered functions to keep those
	that actually draw together.

2008-11-21  Sven Neumann  <sven@gimp.org>

	* app/core/gimpprojection.c (gimp_projection_get_tiles_at_level)
	cosmetics.

	* app/display/gimpdisplayshell-render.[ch]: added const qualifier.

2008-11-21  Martin Nordholts  <martinn@svn.gnome.org>

	* app/widgets/gimpcolormapeditor.c
	* app/widgets/gimpselectioneditor.c: For consistency, prefix the
	#warning:s with FIXME.

2008-11-21  Martin Nordholts  <martinn@svn.gnome.org>

	* app/core/gimpcontainer.[ch]: Move the rest of the class instance
	members to GimpContainerPriv and rename the member num_children to
	n_children.

2008-11-21  Martin Nordholts  <martinn@svn.gnome.org>

	Use GimpContainer getters instead of poking into the class
	instance struct.

	* app/actions/context-commands.c
	* app/actions/data-commands.c
	* app/actions/plug-in-commands.c
	* app/actions/templates-commands.c
	* app/core/gimp-utils.c
	* app/core/gimpdrawablestack.c
	* app/core/gimpitemstack.c
	* app/core/gimplist.c
	* app/gui/gui-vtable.c
	* app/widgets/gimpcontainerbox.c
	* app/widgets/gimpcontainercombobox.c
	* app/widgets/gimpcontainereditor.c
	* app/widgets/gimpcontainerentry.c
	* app/widgets/gimpcontainergridview.c
	* app/widgets/gimpcontainerpopup.c
	* app/widgets/gimpcontainertreeview-dnd.c
	* app/widgets/gimpcontainertreeview.c
	* app/widgets/gimpcontainerview-utils.c
	* app/widgets/gimpcontainerview.c
	* app/widgets/gimpdataeditor.c
	* app/widgets/gimpdatafactoryview.c
	* app/widgets/gimpsettingsbox.c
	* app/widgets/gimpviewablebutton.c
